--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/ufb/autoupdate_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/ufb/autoupdate_index.vm
@@ -104,7 +104,7 @@ $(function(){
 				#set($end=$tailStr.length())
 				<input id="frombankno" name="frombankno" value="${curCard.bankno}" type="hidden"/>
 				<input id="frombanktail" name="frombanktail" value="$tailStr.substring($start,$end)" type="hidden"/>
-				<input id="autoid" name="autoid" value="${AutoTradeVo.autoid}" type="hidden"/>
+				<input id="autoid" name="autoid" value="${Autotrade.autoid}" type="hidden"/>
 				<div class="panel">
                     <ul class="txtAuto width600">
                         <li>
@@ -141,20 +141,20 @@ $(function(){
                         </li>
 						<li id="autoamtErrMsg">
                             <span class="form-title">充值金额</span>
-                            <input id="autoamt" name="autoamt" class="ipt-autoamt input-text" maxlength="11" type="text" value="$!{AutoTradeVo.autoamt}">元
-                            <span class="tips-normal">#if(${AutoTradeVo.autoamt})#else 请填写充值金额 #end</span>
+                            <input id="autoamt" name="autoamt" class="ipt-autoamt input-text" maxlength="11" type="text" value="$!{Autotrade.autoamt}">元
+                            <span class="tips-normal">#if(${Autotrade.autoamt})#else 请填写充值金额 #end</span>
                             <span  class="tips-check"><i class="icon"></i><font id="autoamtTips" >验证提示</font></span>
                         </li>
                         <li id="datErrMsg">
                             <span class="form-title">设置充值时间</span>
-							每月<input id="dat" name="dat" class="ipt-dat input-short" maxlength="2" type="text" value="$!{AutoTradeVo.dat}">日
+							每月<input id="dat" name="dat" class="ipt-dat input-short" maxlength="2" type="text" value="$!{Autotrade.dat}">日
                             <span class="tips-normal"></span>
                             <span class="tips-check"><i class="icon"></i><font id="datTips">验证提示</font></span>
                         </li>
 						<li>
                             <span class="form-title">备注</span>
-                            <input id="summary" name="summary" class="ipt-summary input-text" maxlength="50" type="text" value="$!{AutoTradeVo.summary}">
-                            <span class="tips-normal">#if(${AutoTradeVo.summary})#else 如：收费理财、闲置资金 #end</span>
+                            <input id="summary" name="summary" class="ipt-summary input-text" maxlength="50" type="text" value="$!{Autotrade.summary}">
+                            <span class="tips-normal">#if(${Autotrade.summary})#else 如：收费理财、闲置资金 #end</span>
                             <span id="appamtTips" class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
                         <li>
